FIX: replace ugly spacing on footer bar

--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ h2 {
 
 footer {
     vertical-align:0;
-    height: 40px;
+    height: auto;
+    padding:12px 0px;
     position: absolute;
     width:100%;
     text-align: center;
